--- a/app/src/main/res/layout/form_fragment.xml
+++ b/app/src/main/res/layout/form_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_margin="@dimen/view_margin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.form_fragment.FormFragment">
+    tools:context=".ui.form_fragment.formViewModel.FormFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
