--- a/app/src/main/res/layout/number_input_view.xml
+++ b/app/src/main/res/layout/number_input_view.xml
@@ -19,7 +19,7 @@
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/numberInputEditText"
         style="@style/input_text_field_style"
-        android:hint="@string/app_name"
+        android:hint="@string/input_number"
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
